adapt jdk 1.8